// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Searchbar renders correctly with mobile size 1`] = `
.c0 {
  border-radius: 8px;
  font-size: 18px;
  border: none;
  background-color: red;
}

<button
  className="c0"
  onClick={[Function]}
>
  hello
</button>
`;

exports[`Searchbar renders correctly with normal size 1`] = `
.c0 {
  border-radius: 8px;
  font-size: 18px;
  border: none;
  background-color: blue;
}

<button
  className="c0"
  onClick={[Function]}
>
  hello
</button>
`;
